# what-version

./: README.md  pyproject.toml
tests/: test_cli.py  test_main.py
tests/apps/bash/: test_bash.py
tests/apps/bash/fixtures/: bash.html
tests/apps/dummy/: test_dummy.py
tests/apps/python/: test_python.py
tests/apps/python/fixtures/: downloads.html
tests/apps/rsync/: test_rsync.py
tests/apps/rsync/fixtures/: tags.html
what_version/: __main__.py  logger.py  main.py
what_version/apps/: __init__.py  _base.py  bash.py  dummy.py  python.py  rsync.py
