[tool.poetry]
name = "what-version"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest-subprocess = "^1.4.2"
requests-mock = "^1.10.0"
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
mypy = "^0.982"
types-requests = "^2.28.11"
types-beautifulsoup4 = "^4.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true

[tool.isort]
profile = "black"
